# LogicalVision2

./: .gitignore  CMakeLists.txt  Makefile  a.txt  process_videos.sh  results.txt  simple_game.cpp  simple_game.h  sp1_results_194443543.pl  sp1_results_296919199.pl  sp1_results_560015147.pl  sp1_results_594830915.pl  sp1_results_859488992.pl  sp1_results_882506231.pl  sp1_results_935753421.pl  space_invaders_results_143770837.pl  space_invaders_results_972625818.pl
200_pts/: sp1_results.txt  sp2_results.txt  sp3_results.txt
data/: Default Project.osp  blurry_line.xcf  dashed_line.xcf  line.xcf
metagol_tests/: la1.pl  la1_a  la2.pl  la3 (copy).pl  la3.pl  la4.pl  la5.pl  la6.pl  la7.pl  la8.pl  la_contain_1.pl  la_linking_1.pl  la_linking_2.pl  la_linking_3.pl  la_linking_time.pl  la_linking_time_2.pl  la_linking_time_3.pl  la_objects_1.pl  la_shapes_1.pl  la_shapes_2.pl
src/: LogicalAtari.pl  LogicalAtari_maybe_junk.pl  Makefile  MetaAtari.pl  MetaAtari_grammar.pl  MetaAtari_similar_shapes.pl  areas.py  inputfile.txt  intputfile1.txt  intputfile2.txt  meta.sh  outputfile1.txt  outputfile2.txt  process_videos.sh  splitter.py
src/cpp/: Makefile  ale2prolog.cpp  cvatari.cpp  cvio.cpp  cvsampler.cpp  lv_utils.cpp  utils.hpp
src/img2/: atari.hpp
src/metagol_ai/: background.pl  common.pl  eval_experiment.pl  example-chess-ho.pl  example-waiter-ho.pl  example_objects.pl  intersection_finder.pl  metagol_ai.pl  pete_experiment.pl  peter.pl  peter_2.pl  run_experiment.sh  single_experiment.pl  transitions.pl
src/prolog2/: Makefile  cvatari.cpp  cvatari.h  cvio.cpp  (+1 more)
(+200 files in other folders)
